# youtube-advisor

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
scripts/: install.sh  status.sh
src/youtube_advisor/: __init__.py  _cookies.py  _llm.py  _md.py  _naming.py  _paths.py  _progress.py  bootstrap.py  build_embeddings.py  build_index.py  cli.py  eval_runner.py  fetch_channel.py  filters.py  gen_benchmark.py  gen_skill_md.py  postrun_guide.py  search.py  update.py
src/youtube_advisor/ingest/: captions_api.py  captions_ytdlp.py  normalize.py  orchestrator.py  whisper.py
src/youtube_advisor/templates/: advisor.AGENTS.md.tmpl  advisor.README.md.tmpl  advisor.SKILL.md.tmpl  answer_template.md.tmpl  benchmark.json.tmpl  search.py.tmpl  workflow.md.tmpl
tests/: conftest.py  test_bootstrap.py  test_build_embeddings.py  test_build_index.py  test_captions_api.py  test_captions_ytdlp.py  test_cookies.py  test_e2e.py  test_eval_runner.py  test_fetch_channel.py  test_filters.py  test_gen_benchmark.py  test_gen_skill_md.py  test_normalize.py  test_orchestrator.py  test_postrun_guide.py  test_progress.py  test_search.py  test_templates.py  test_update.py  test_whisper.py
tests/fixtures/: sample.vtt  yc_flat.json
